src/objects/Promotions__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Reduction__c</fullName>
        <label>Commission Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Discount_Type__c</fullName>
        <label>Management Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>$</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Management Discount</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <label>Promotion Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Setup_Discount_Type__c</fullName>
        <label>Setup Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>$</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setup_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Setup Discount</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Period</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Management_Discount_Type__c</columns>
        <columns>Management_Discount__c</columns>
        <columns>Setup_Discount_Type__c</columns>
        <columns>Setup_Discount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>